Some style fixes to have all the editInfo elements in the tooltip appear properly aligned

--- a/webodf/webodf.css
+++ b/webodf/webodf.css
@@ -293,6 +293,7 @@ cursor|cursor > div:after {
     text-decoration: none;
     color: white;
     width: 100%;
+    height: 12pt;
 }
 .editInfoColor {
     float: left;
@@ -310,7 +311,6 @@ cursor|cursor > div:after {
     float: right;
     margin-left: 30pt;
     font-size: 8pt;
-    line-height: 12pt;
     font-style: italic;
     color: yellow;
 }
